<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/background_loginscreen">

    <LinearLayout
        android:id="@+id/linear_layout_login_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <!--<LinearLayout-->
        <!--android:layout_width="0px"-->
        <!--android:layout_height="0px"-->
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true" />-->

        <!--Slogan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription=""
            android:text="@string/app_slogan"
            android:textSize="20sp"
            android:textColor="@android:color/white" />

        <!-- Email EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lists_title_bottom_margin"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:hint="@string/hint_enter_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edit_text_password"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/login_buttons_text_size"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password EditText -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:hint="@string/hint_enter_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="@dimen/login_buttons_text_size"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>


        <!-- Login button-->
        <Button
            android:id="@+id/login_with_password"
            style="@style/Widget.Udacity.Button.Login"
            android:layout_width="300dp"
            android:layout_height="@dimen/input_field_height"
            android:layout_marginBottom="@dimen/lv_header_text_size"
            android:background="@android:color/black"
            android:onClick="onSignInPressed"
            android:text="@string/button_signin_with_password"
            android:textColor="@android:color/white" />

        <!-- Google login button -->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/login_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Create account link -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_dont_have_account"
                style="@style/LoginCreateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_account" />

            <TextView
                android:id="@+id/tv_sign_up"
                style="@style/LoginCreateTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignUpPressed"
                android:text="@string/button_create_account" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>