...
                android:layout_margin="15dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_days_until_sort"
                    android:textSize="30sp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:background="@android:color/white"
                    android:text="# Days until sort"
                    android:layout_marginBottom="15dp"/>
...
